tests/snapshots/protocols__interpreter__tests__add_ok.snap
---
source: src/interpreter.rs
expression: content
---
Assertion Failed

error: The two expressions did not evaluate to the same value
   ┌─ tests/add_struct.prot:17:13
   │
17 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: ValueOwned(00000000000000000000000000001110), RHS Value: ValueOwned(00000000000000000000000000000000)
