tests/snapshots/protocols__interpreter__tests__mult_execution.snap
---
source: src/interpreter.rs
expression: content
snapshot_kind: text
---
Assertion Passed

warning: Inferring step value to be 1.
   ┌─ tests/mul.prot:11:3
   │
11 │   step();
   │   ^^^^^^^ Inferring step value to be 1.

warning: Inferring step value to be 1.
   ┌─ tests/mul.prot:12:3
   │
12 │   step();
   │   ^^^^^^^ Inferring step value to be 1.

warning: Inferring step value to be 1.
   ┌─ tests/mul.prot:18:3
   │
18 │   step();
   │   ^^^^^^^ Inferring step value to be 1.
